--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,5 @@
-<div class="container">
-    <div class="row">
-      <app-toolbar></app-toolbar>
-    </div>
-    <div class="row">
-      <div class="col-2">
-        <app-navbar></app-navbar>
-      </div>
-      <div class="col-10">
-        <app-student></app-student>
-      </div>
-    </div>
-    <div class="row">
-      <app-footer></app-footer>
-    </div>
-  </div>
+<app-toolbar></app-toolbar>
+<app-sidebar></app-sidebar>
+<app-page-wrapper>
+    <app-home></app-home>
+</app-page-wrapper>
