--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,8 +1,9 @@
-<nav>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Cursos</a></li>
-    <li><a href="#">Estudiantes</a></li>
-    <li><a href="#">Login</a></li>
-  </ul>
-</nav>
+<header>
+    <nav>
+        <ul>
+            <li><a routerLink="/home">Home</a></li>
+            <li><a routerLink="/about">About</a></li>
+            <li><a routerLink="/contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
