--- a/src/app/page-wrapper/page-wrapper.component.css
+++ b/src/app/page-wrapper/page-wrapper.component.css
@@ -4,5 +4,5 @@ main {
     padding: 20px;
     align-items: center;
     display:flex;
-    background-color: rgb(99, 92, 156);
+    background-color: var( --color-background-secondary);
 }
