--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,11 +1,12 @@
 aside {
     width:var(--sidebar-width);
-    background-color: rgb(62, 91, 221);
+    background-color: var(--color-background-primary);
     height:calc(100vh - var(--toolbar-height));
     position:fixed;
-     display:flex;
+    display:flex;
     justify-content: space-evenly;
     align-items: center;
+    color: var(--color-text-primary);
 }
 
 ul {
@@ -18,4 +19,18 @@ li {
     list-style: none;
     font-weight: bold;
     align-self: center;
+    font-size: var(--font-size-navbar);
+    
+}
+
+a {
+    display: block;
+    padding: 10px;
+    width: auto;
+    text-decoration: none;
+    color: var(--color-text-primary);
+}
+
+aside ul li a:hover {
+    background-color: var(--color-hover);
 }
