--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -1,19 +1,29 @@
 header {
-    background-color: rgb(35, 51, 124);
-    height: var(--toolbar-height);
-    color: white;
-    display:flex;
-    justify-content: space-evenly;
-    align-items: center;
+  background-color: var(--color-background-primary);
+  height: var(--toolbar-height);
+  color: var(--color-text-primary);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 ul {
-    display: flex;
-    gap: 50px;
+  display: flex;
+  gap: 50px;
 }
 
 li {
-    list-style: none;
-    font-weight: bold;
-    align-self: center;
+  list-style: none;
+  font-weight: bold;
+  align-self: center;
+  font-size: var( --font-size-navbar);
+}
+li:hover {
+    background-color: var(--color-hover);
+    height: 100%;
+}
+
+a{
+  color: var(--color-text-primary);
+  text-decoration: none;
 }
