--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
 <app-toolbar></app-toolbar>
 <app-sidebar></app-sidebar>
 <app-page-wrapper>
-  <app-home ></app-home>
+  <div class="formBackground">
+    <div class="card container">
+      <div class="card-body">
+        <app-reactive-form></app-reactive-form>
+      </div>
+    </div>
   
+  </div>
+  <!-- <app-home></app-home> -->
 </app-page-wrapper>
