sidebar y toolbar material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
-<app-toolbar></app-toolbar>
+<!-- <app-toolbar></app-toolbar>
 <app-sidebar></app-sidebar>
-<app-page-wrapper>
-  <div class="formBackground">
+<app-page-wrapper> -->
+  <!-- <div class="formBackground">
     <div class="card container">
       <div class="card-body">
         <app-reactive-form></app-reactive-form>
       </div>
     </div>
   
-  </div>
+  </div> -->
   <!-- <app-home></app-home> -->
-</app-page-wrapper>
+<!-- </app-page-wrapper> -->
+<app-dashboard></app-dashboard>
