--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,11 +4,9 @@
   padding: 0;
 }
 
-body {
-  font-family: sans-serif;
-}
 
-.container {
+
+/* .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
@@ -62,4 +60,4 @@ body {
   min-height:50vh;
   min-width:90vh;
   display: block;
-}
+} */
