--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,5 @@
     --font-size-subtitle: 20px;
     --font-size-text: 16px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
